kubernetes/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: slugsurvival
    version: v1
  name: slugsurvival
  namespace: slug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slugsurvival
  template:
    metadata:
      labels:
        app: slugsurvival
    spec:
      containers:
      - name: slugsurvival
        image: zllovesuki/slugsurvival:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
          protocol: TCP
        args:
        livenessProbe:
          httpGet:
            path: /
            port: 3001
          initialDelaySeconds: 120
          timeoutSeconds: 5
        volumeMounts:
        - name: config-volume
          mountPath: /usr/src/app/config
      volumes:
      - name: config-volume
        secret:
          secretName: ss-config
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: slugsurvival
  name: slugsurvival
  namespace: slug
spec:
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3001
  selector:
    app: slugsurvival
